{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 19,
  "lineage": "5b1e207a-c7b8-5b00-3c3a-024d185753a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:security-group/sg-01165382e538868b8",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-01165382e538868b8",
            "ingress": [],
            "name": "webserver-http13252132e32",
            "name_prefix": "",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0483b42696c22cf38"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:security-group/sg-006852ca104e6dd8e",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-006852ca104e6dd8e",
            "ingress": [],
            "name": "webserver-http2",
            "name_prefix": "",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0483b42696c22cf38"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}